gleam/aion_flow/test/compile_fail/wrong_query_return_positive.gleam.fixture
import aion/codec
import aion/query

pub type QueryState {
  QueryState(count: Int)
}

fn state_codec() -> codec.Codec(QueryState) {
  codec.Codec(encode: fn(_state) { "{}" }, decode: fn(_payload) {
    Ok(QueryState(count: 0))
  })
}

pub fn valid_query_return() {
  query.handler("state", state_codec(), fn() { QueryState(count: 1) })
}
